# ironguard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
configs/: lan-routing-server.json  multi-client-quic-server.json  simple-client-server.json
configs/launchd/: net.ironguard.plist
configs/systemd/: ironguard@.service
crates/ironguard-cli/: Cargo.toml
crates/ironguard-cli/src/: main.rs
crates/ironguard-config/: Cargo.toml
crates/ironguard-config/src/: conf.rs  keys.rs  lib.rs  types.rs  validate.rs
crates/ironguard-config/tests/: config_to_core.rs
crates/ironguard-connect/: Cargo.toml
crates/ironguard-connect/src/: birthday.rs  candidate.rs  holepunch.rs  lib.rs  manager.rs  netcheck.rs  portmap.rs  stun.rs
crates/ironguard-connect/src/discovery/: local.rs  mdns.rs  mod.rs  subnet.rs
crates/ironguard-connect/src/relay/: client.rs  mod.rs  protocol.rs  server.rs
crates/ironguard-core/: Cargo.toml
crates/ironguard-core/benches/: pipeline.rs
crates/ironguard-core/src/: constants.rs  device.rs  lib.rs  peer.rs  queue.rs  timers.rs  types.rs  workers.rs
crates/ironguard-core/src/handshake/: device.rs  macs.rs  messages.rs  mod.rs  noise.rs  peer.rs  pq.rs  ratelimiter.rs  timestamp.rs
crates/ironguard-core/src/pipeline/: batch.rs  io.rs  mod.rs  pool.rs  reorder.rs  vec_pool.rs
crates/ironguard-core/src/router/: anti_replay.rs  constants.rs  device.rs  ip.rs  messages.rs  messages_v2.rs  mod.rs  peer.rs  queue.rs  receive.rs  relay.rs  route.rs  send.rs  tests.rs  types.rs  worker.rs
crates/ironguard-core/src/session/: keys.rs  manager.rs  mod.rs  quic.rs  state.rs  tasks.rs
crates/ironguard-platform/: Cargo.toml
crates/ironguard-platform/src/: capabilities.rs  endpoint.rs  lib.rs  net_manager.rs  quic.rs  tun.rs  udp.rs
crates/ironguard-platform/src/dummy/: mod.rs  net_manager.rs  tun.rs  udp.rs
crates/ironguard-platform/src/linux/: endpoint.rs  mod.rs  net_manager.rs  tun.rs  udp.rs
crates/ironguard-platform/src/macos/: darwin_batch.rs  endpoint.rs  mod.rs  net_manager.rs  tun.rs  udp.rs
crates/ironguard-tui/: Cargo.toml
crates/ironguard-tui/src/: app.rs  event.rs  main.rs  tui.rs
crates/ironguard-tui/src/actions/: config.rs  keys.rs  mod.rs  server.rs  setup.rs  system.rs
crates/ironguard-tui/src/ui/: clients.rs  dashboard.rs  help.rs  logs.rs  mod.rs  service.rs  setup.rs
docs/: PERF-REPORT-2026-03-23.md  PROJECT-SUMMARY.md
docs/superpowers/plans/: 2026-03-23-ironguard-v2-performance-overhaul.md  2026-03-27-issue2-field-test-fixes.md
docs/superpowers/specs/: 2026-03-23-ironguard-v2-performance-overhaul-design.md  2026-03-27-issue2-field-test-fixes-design.md
