[package]
name = "ironguard-connect"
description = "NAT traversal and direct connectivity for IronGuard"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
stunclient = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
