[package]
name = "ironguard-core"
description = "Pure WireGuard protocol implementation"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ring = { workspace = true }
snow = { workspace = true, optional = true }
blake2b_simd = { workspace = true, optional = true }
blake2s_simd = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
zerocopy = { workspace = true }
arraydeque = { workspace = true }
spin = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
ip_network_table-deps-treebitmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
x25519-dalek = { workspace = true }
tokio = { workspace = true }
ironguard-platform = { path = "../ironguard-platform" }
ml-kem = { workspace = true, optional = true }
# ml-kem 0.2 uses rand_core 0.6; our rand 0.9 uses rand_core 0.9.
# We need the 0.6 OsRng to satisfy ml-kem's CryptoRngCore bound.
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"], optional = true }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["legacy-wireguard"]
legacy-wireguard = ["dep:snow", "dep:blake2s_simd", "dep:blake2b_simd", "dep:chacha20poly1305"]
pq = ["dep:ml-kem", "dep:rand_core_06"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:serde", "dep:serde_json"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
