[package]
name = "ironguard-core"
description = "Pure WireGuard protocol implementation"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ring = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
zerocopy = { workspace = true }
arraydeque = { workspace = true }
spin = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
ip_network_table-deps-treebitmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
x25519-dalek = { workspace = true }
tokio = { workspace = true }
ironguard-platform = { path = "../ironguard-platform" }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["quic"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:serde", "dep:serde_json"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
